<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrationimage"
    tools:context=".Register1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_60ssp"
        android:layout_height="@dimen/_60ssp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/login"
        android:clickable="true"
        android:contentDescription="@string/Sign_Up"
        android:contextClickable="true"
        android:foregroundGravity="clip_horizontal|clip_vertical"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        tools:srcCompat="@color/white" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="cursive"
        android:text="@string/Sign_Up"
        android:textAlignment="center"
        android:textColor="#59F4EFEF"
        android:textSize="@dimen/_32ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:clickable="true"
        android:contextClickable="true"
        android:text="@string/upload_your_profile_picture"
        android:textColor="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_pg"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:outlineAmbientShadowColor="#FAF2F2"
        android:outlineSpotShadowColor="#FAF6F6"
        android:paddingLeft="20dp"
        android:shadowColor="#AFACAC"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/startpoint"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/input_pg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="@dimen/_10ssp"
        android:paddingBottom="@dimen/_10ssp"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/endpoint"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/input_pg"
        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="@dimen/_10ssp"
        android:paddingBottom="@dimen/_10ssp"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startpoint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tripname"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/input_pg"
        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="@dimen/_10ssp"
        android:paddingBottom="@dimen/_10ssp"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endpoint" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/input_pg"
        android:drawableLeft="@drawable/ic_baseline_call_24"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripname" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/_20ssp"
        android:background="@drawable/button_s"
        android:backgroundTint="#6F9F9B9B"
        android:text="@string/sign_up"
        android:textColor="#C4F3EFEF"
        android:textColorHint="#86E3E0E0"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/haveEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/already_have_e_mail"
        android:textColor="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton"
        app:layout_constraintVertical_bias="0.19999999" />

</androidx.constraintlayout.widget.ConstraintLayout>