<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginim"
    android:hapticFeedbackEnabled="false"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_input"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:outlineAmbientShadowColor="#FAF2F2"
        android:outlineSpotShadowColor="#FAF6F6"
        android:paddingLeft="20dp"
        android:shadowColor="#AFACAC"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/endpoint"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_input"
        android:drawableLeft="@drawable/ic_baseline_visibility_off_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="@dimen/_10ssp"
        android:paddingBottom="@dimen/_10ssp"
        android:textColor="#D0FAFAFA"
        android:textColorHint="#86E3E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30ssp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_button"
        android:backgroundTint="#809F9B9B"
        android:text="@string/login"
        android:textColor="#C4F3EFEF"
        android:textColorHint="#86E3E0E0"
        app:cornerRadius="50dp"
        app:iconTint="#C31C1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endpoint" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="SIGN IN WITH"
        android:textAlignment="center"
        android:textColor="#AAA8A8"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton" />

    <TextView
        android:id="@+id/havenotaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:clickable="true"
        android:text="@string/don_t_have_account"
        android:textColor="#C4F3EFEF"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:fontFamily="cursive"
        android:text="@string/Login"
        android:textColor="#CCF4EFEF"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/_40ssp"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_input"
        android:clickable="true"
        android:contextClickable="true"
        android:drawableStart="@drawable/ic_google"
        android:foregroundGravity="center"
        android:gravity="center"
        android:paddingStart="@dimen/_5ssp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/endpoint"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/_40ssp"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="545dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_input"
        android:clickable="true"
        android:contextClickable="true"
        android:drawableBottom="@drawable/ic_linkedin"
        android:paddingBottom="@dimen/_4sdp"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/_40ssp"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/login_input"
        android:clickable="true"
        android:contextClickable="true"
        android:drawableBottom="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/endpoint"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>
